create object scripts in package.json

--- a/package.json
+++ b/package.json
@@ -34,6 +34,29 @@
     "npm": ">=6.14.4",
     "yarn": ">=1.22.0"
   },
+  "scripts": {
+    "clean": "rm -rf build/ generated/",
+    "prepare:apothem": "mustache networks/apothem.json subgraph.template.yaml subgraph.apothem.yaml && node scripts/xdc subgraph.apothem.yaml",
+    "prepare:xinfin": "mustache networks/xinfin.json subgraph.template.yaml subgraph.xinfin.yaml && node scripts/xdc subgraph.xinfin.yaml",
+    "prepare:mumbai": "mustache networks/mumbai.json subgraph.template.yaml subgraph.mumbai.yaml",
+    "prepare:polygon": "mustache networks/polygon.json subgraph.template.yaml subgraph.polygon.yaml",
+    "codegen:apothem": "graph codegen --output-dir generated subgraph.apothem.yaml",
+    "codegen:xinfin": "graph codegen --output-dir generated subgraph.xinfin.yaml",
+    "codegen:mumbai": "graph codegen --output-dir generated subgraph.mumbai.yaml",
+    "codegen:polygon": "graph codegen --output-dir generated subgraph.polygon.yaml",
+    "make:apothem": "yarn clean && yarn prepare:apothem && yarn codegen:apothem",
+    "make:xinfin": "yarn clean && yarn prepare:xinfin && yarn codegen:xinfin",
+    "make:mumbai": "yarn clean && yarn prepare:mumbai && yarn codegen:mumbai",
+    "make:polygon": "yarn clean && yarn prepare:polygon && yarn codegen:polygon",
+    "create:apothem": "graph create --node http://graph-node:8020 gzliudan/test-coin-subgraph-apothem",
+    "create:xinfin": "graph create --node http://graph-node:8020 gzliudan/test-coin-subgraph-xinfin",
+    "remove:apothem": "graph remove --node http://graph-node:8020 gzliudan/test-coin-subgraph-apothem",
+    "remove:xinfin": "graph remove --node http://graph-node:8020 gzliudan/test-coin-subgraph-xinfin",
+    "deploy:apothem": "graph deploy --node http://graph-node:8020 --ipfs http://graph-node:5001 --version-label v0.0.1 gzliudan/test-coin-subgraph-apothem subgraph.apothem.yaml",
+    "deploy:xinfin": "graph deploy --node http://graph-node:8020 --ipfs http://graph-node:5001 --version-label v0.0.1 gzliudan/test-coin-subgraph-xinfin subgraph.xinfin.yaml",
+    "deploy:mumbai": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gzliudan/test-coin-mumbai subgraph.mumbai.yaml",
+    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gzliudan/test-coin-polygon subgraph.polygon.yaml"
+  },
   "devDependencies": {
     "@amxx/graphprotocol-utils": "^1.1.0",
     "@graphprotocol/graph-cli": "^0.59.0",
