--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "yarn": ">=1.22.0"
   },
   "devDependencies": {
+    "@graphprotocol/graph-ts": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
