--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "yarn": ">=1.22.0"
   },
   "devDependencies": {
+    "@amxx/graphprotocol-utils": "^1.1.0",
     "@graphprotocol/graph-cli": "^0.59.0",
     "@graphprotocol/graph-ts": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
